tests/errors/duplicate-let-size.fut
-- ==
-- error: also bound

def f (x: []i32) =
  let [n] (n: [n]i32) = x
  in n
